--- a/app/news.html
+++ b/app/news.html
@@ -524,7 +524,7 @@
 				<div class="f-nav__wrap js-show-hidden">
 					<div><a href="">Главная</a></div>
 					<div><a href="">О нашей компании</a></div>
-					<div><a href="">Новости компании</a></div>
+					<div class="active"><a href="">Новости компании</a></div>
 					<div><a href="">Калькулятор эффективности</a></div>
 					<div><a href="">Стать дистрибьютором</a></div>
 					<div><a href="">Отзывы клиентов</a></div>
@@ -587,6 +587,12 @@
 	<!-- слайдеры -->
 	<script src="js/slick.min.js"></script>
 	
+	
+	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/maskedinput.min.js"></script>
+	
+	
+	<script src="js/jquery.fancybox.min.js"></script>
 	
 	
 	<script src="js/lozad.min.js"></script>
