--- a/app/index.html
+++ b/app/index.html
@@ -1161,7 +1161,7 @@
 				<div class="f-nav__wrap js-show-hidden">
 					<div><a href="">Главная</a></div>
 					<div><a href="">О нашей компании</a></div>
-					<div><a href="">Новости компании</a></div>
+					<div class="active"><a href="">Новости компании</a></div>
 					<div><a href="">Калькулятор эффективности</a></div>
 					<div><a href="">Стать дистрибьютором</a></div>
 					<div><a href="">Отзывы клиентов</a></div>
@@ -1224,6 +1224,12 @@
 	<!-- слайдеры -->
 	<script src="js/slick.min.js"></script>
 	
+	
+	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/maskedinput.min.js"></script>
+	
+	
+	<script src="js/jquery.fancybox.min.js"></script>
 	
 	
 	<script src="js/lozad.min.js"></script>
