--- a/app/distributor.html
+++ b/app/distributor.html
@@ -491,7 +491,7 @@
 				<div class="f-nav__wrap js-show-hidden">
 					<div><a href="">Главная</a></div>
 					<div><a href="">О нашей компании</a></div>
-					<div class="active"><a href="">Новости компании</a></div>
+					<div><a href="">Новости компании</a></div>
 					<div><a href="">Калькулятор эффективности</a></div>
 					<div><a href="">Стать дистрибьютором</a></div>
 					<div><a href="">Отзывы клиентов</a></div>
