--- a/app/links.html
+++ b/app/links.html
@@ -29,7 +29,8 @@
 		<div><a href="catalog.html">Каталог товаров</a></div>
 		<div><a href="contacts.html">Контакты</a></div>
 		<div><a href="about.html">О компании</a></div>
-		<!-- <div><a href="card.html">Карточка товара</a></div> -->
+		<div><a href="distributor.html">Дистрибьюторам</a></div>
+		<div><a href="card.html">Карточка товара</a></div>
 		</div>
 		<!-- end inner-wrapper -->
 	</div>
