--- a/app/about.html
+++ b/app/about.html
@@ -816,7 +816,7 @@
 									<div class="form">
 										<form id="form-consultation">
 											<div class="field">
-												<input type="text" class="inp inp--white inp--rounded" name="phone" placeholder="+7 (____) ____ - ____">
+												<input type="text" class="inp inp--white inp--rounded" name="phone" placeholder="7(___)___-__-__">
 											</div>
 											
 											<div class="bottom">
@@ -942,7 +942,7 @@
 	
 	
 	<script src="js/jquery.validate.min.js"></script>
-	<script src="js/maskedinput.min.js"></script>
+	<script src="js/inputmask.min.js"></script>
 	
 	
 	<script src="js/jquery.fancybox.min.js"></script>
