--- a/app/news_list.html
+++ b/app/news_list.html
@@ -702,12 +702,31 @@
 	
 	
 	
+	
+	<div style="display: none;" id="popup-offer-successfull" class="popup">
+		<div class="popup__wrap">
+			<div class="popup-icon">
+				<span class="i i-mail"></span>
+			</div>
+			
+			<div class="popup-title">Спасибо за подписку!</div>
+			
+			<div class="popup-text">Ваше email vasyan@gmail.com успешно подписан на рассылку новостей и обновлений каталога.</div>
+			
+			<div class="popup-btn">
+				<button class="btn btn--yellow size-l js-fancybox-close">Хорошо</button>
+			</div>
+		</div>
+	</div>
+	
+	
+	
 	<!-- слайдеры -->
 	<script src="js/slick.min.js"></script>
 	
 	
 	<script src="js/jquery.validate.min.js"></script>
-	<script src="js/maskedinput.min.js"></script>
+	<script src="js/inputmask.min.js"></script>
 	
 	
 	<script src="js/jquery.fancybox.min.js"></script>
