--- a/app/catalog.html
+++ b/app/catalog.html
@@ -1229,7 +1229,7 @@
 							<div class="bottom-request__form form">
 								<form id="form-request">
 									<div class="field">
-										<input type="text" class="inp inp--white" name="phone" placeholder="+7 (____) ____ - ____">
+										<input type="text" class="inp inp--white" name="phone" placeholder="7(___)___-__-__">
 									</div>
 									
 									<div class="submit">
@@ -1354,7 +1354,7 @@
 	
 	
 	<script src="js/jquery.validate.min.js"></script>
-	<script src="js/maskedinput.min.js"></script>
+	<script src="js/inputmask.min.js"></script>
 	
 	
 	<script src="js/jquery.fancybox.min.js"></script>
