--- a/app/contacts.html
+++ b/app/contacts.html
@@ -678,7 +678,7 @@
 	
 	
 	<script src="js/jquery.validate.min.js"></script>
-	<script src="js/maskedinput.min.js"></script>
+	<script src="js/inputmask.min.js"></script>
 	
 	
 	<script src="js/jquery.fancybox.min.js"></script>
