--- a/app/distributor.html
+++ b/app/distributor.html
@@ -425,7 +425,7 @@
 										</div>
 										
 										<div class="field">
-											<input type="text" class="inp inp--white" name="phone" placeholder="+7 (____) ____ - ____">
+											<input type="text" class="inp inp--white" name="phone" placeholder="7(___)___-__-__">
 										</div>
 										
 										<div class="field">
@@ -556,7 +556,7 @@
 	
 	
 	<script src="js/jquery.validate.min.js"></script>
-	<script src="js/maskedinput.min.js"></script>
+	<script src="js/inputmask.min.js"></script>
 	
 	
 	<script src="js/jquery.fancybox.min.js"></script>
