--- a/app/feedback.html
+++ b/app/feedback.html
@@ -602,7 +602,7 @@
 	
 	
 	<script src="js/jquery.validate.min.js"></script>
-	<script src="js/maskedinput.min.js"></script>
+	<script src="js/inputmask.min.js"></script>
 	
 	
 	<script src="js/jquery.fancybox.min.js"></script>
